--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
                 <div class="col-lg-7 order-lg-1 order-2 banner-content">
                     <h2 class="text-uppercase position-relative">Hell0</h2>
                     <h1 class="text-uppercase">I am Md Azal Ashraf</h1>
-                    <h5 class="text-uppercase">Frontend Designer</h5>
+                    <h5 class="text-uppercase">Front Designer</h5>
                    
                 </div>
                 <div class="col-lg-5 order-lg-2 order-1">
