--- a/home.html
+++ b/home.html
@@ -66,7 +66,7 @@
                 <div class="col-lg-7 order-lg-1 order-2 banner-content">
                     <h2 class="text-uppercase position-relative">Hell0</h2>
                     <h1 class="text-uppercase">I am Md Azal Ashraf</h1>
-                    <h5 class="text-uppercase">Front Designer</h5>
+                    <h5 class="text-uppercase">Frontend Developer|</h5>
                    
                 </div>
                 <div class="col-lg-5 order-lg-2 order-1">
@@ -434,12 +434,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-8 col-sm-12">
-                    <p class="footer-text text-center my-2">Copyright © 2022 All rights reserved | This template
-                        is made with <i class="far fa-heart"></i> by <a href="#">Code4Education</a>
-                    </p>
-
-                </div>
+                
             </div>
         </div>
     </section>
